Create color-change and reset functionality

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
     <div class="mainWrapper">
 
+        <button id="etchReset" type="reset" value="reset">Reset</button>
+
         <div class="container"></div>
 
     </div>
