Update flexible layout

--- a/index.html
+++ b/index.html
@@ -16,15 +16,27 @@
 
 <body>
 
-    <div class="mainWrapper">
+    <section id="header">
 
-        <input id="picker" type="color">
+        <h1>Etch-a-Sketch</h1>
 
-        <button id="etchReset" type="reset" value="reset">Reset</button>
+    </section>
+
+    <section id="mainContent">
+
+        <div class="sidebar">
+
+            <input id="picker" type="color">
+
+            <button id="mode" type="button"></button>
+
+            <button id="etchReset" type="reset" value="reset">Reset</button>
+
+        </div>
 
         <div class="container"></div>
 
-    </div>
+    </section>
     
 </body>
 
