Layout and slider updates

--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
 
             <input id="picker" type="color">
 
-            <button id="mode" type="button"></button>
+            <label class="switch">
+
+                <input type="checkbox">
+
+                <span class="slider"></span>
+
+            </label>
 
             <button id="etchReset" type="reset" value="reset">Reset</button>
 
