Remember color selection, add rainbow effect

--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
 
         <div class="sidebar">
 
-            <input id="picker" type="color">
+            <label for="colorPicker">
+                
+                <p class="pColor">COLOR</p>
+
+                <input id="picker" type="color" name="colorPicker">
+
+            </label>
 
             <label class="switch">
 
