Move mode switch to header

--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
 
         <h1>Etch-a-Sketch</h1>
 
+        <!-- ADD FIXED POSITIONING TO TOP RIGHT -->
+
+        <label class="switch">
+
+            <input type="checkbox">
+
+            <span class="slider"></span>
+
+        </label>
+
     </section>
 
     <section id="mainContent">
@@ -31,14 +41,6 @@
                 <p class="pColor">COLOR</p>
 
                 <input id="picker" type="color" name="colorPicker">
-
-            </label>
-
-            <label class="switch">
-
-                <input type="checkbox">
-
-                <span class="slider"></span>
 
             </label>
 
