--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <label for="colorPicker">
                 
-                <p class="pColor">COLOR</p>
+                <p class="pColor">PICK A COLOR</p>
 
                 <input id="picker" type="color" name="colorPicker">
 
