Change element classes to IDs

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <section id="mainContent">
 
-        <div class="sidebar">
+        <div id="sidebar">
 
             <label for="colorPicker">
                 
@@ -48,7 +48,7 @@
 
         </div>
 
-        <div class="container"></div>
+        <div id="container"></div>
 
     </section>
     
