Begin mode implementation

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 
             </label>
 
+            <button id="monocolor" type="button" value="monocolor">Color</button>
+
+            <button id="rainbow" type="button" value="rainbow">Rainbow</button>
+
+            <button id="eraser" type="button" value="eraser">Eraser</button>
+
             <button id="etchReset" type="reset" value="reset">Reset</button>
 
         </div>
