Fix button mode change logic

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
             </label>
 
-            <button id="monocolor" type="button" value="monocolor">Color</button>
+            <button id="monocolor" class="active" type="button">Color</button>
 
-            <button id="rainbow" type="button" value="rainbow">Rainbow</button>
+            <button id="rainbow" type="button">Rainbow</button>
 
-            <button id="eraser" type="button" value="eraser">Eraser</button>
+            <button id="eraser" type="button">Eraser</button>
 
             <button id="etchReset" type="reset" value="reset">Reset</button>
 
