Add current color element

--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
 
             <label for="colorPicker">
                 
-                <p class="pColor">PICK A COLOR</p>
+                <p id="pColor">PICK A COLOR</p>
 
                 <input id="picker" type="color" name="colorPicker">
+
+                <p id="rgb"></p>
 
             </label>
 
