--- a/index.html
+++ b/index.html
@@ -40,15 +40,13 @@
 
             <label for="colorPicker">
                 
-                <p id="pColor">PICK A COLOR</p>
-
                 <input id="picker" type="color" name="colorPicker">
 
                 <p id="rgb"></p>
 
             </label>
 
-            <button id="monocolor" class="active" type="button">Color</button>
+            <button id="monocolor" class="active" type="button">Monocolor</button>
 
             <button id="rainbow" type="button">Rainbow</button>
 
